changed font for readabilty, & fix home screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,13 @@
 }
 
 .montserrat {
-  font-family: "Agdasima", sans-serif;
-  font-style: normal;
+    font-family: "Roboto", sans-serif; 
+    font-style: normal;
 }
   
 /* General Styles */
 body {
-  font-family: "Agdasima", sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #f0f0f0;
   display: flex;
   justify-content: center;
@@ -64,7 +64,7 @@ body {
 #home-screen h4 {
   font-size: 0.5rem;
   margin-bottom: 20px;
-  font-family: "Montserrat", thin;
+  font-family: "Roboto", sans-serif;
 }
 
 
